# spy-alert

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.kiro/specs/spy-sma-alert-bot/: design.md  requirements.md  tasks.md
assets/: icon.icns
scripts/: setup_jobs.sh  start_screen.sh  stop_jobs.sh
spy_sma_alert_bot/: config.py  main.py  models.py
spy_sma_alert_bot/services/: alert_dispatcher.py  chart_generator.py  crossover_detector.py  message_formatter.py  monitoring_service.py  price_data.py  sma_calculator.py  telegram_bot.py  user_subscription_manager.py
tests/property/: test_alert_dispatcher_properties.py  test_chart_properties.py  test_crossover_properties.py  test_message_properties.py  test_monitoring_properties.py  test_price_data_properties.py  test_sma_properties.py  test_start_command_properties.py  test_status_command_properties.py  test_user_subscription_properties.py
tests/unit/: test_crossover_detector.py
